# NS

./: CMakeLists.txt  build.sh  main.cpp
data/: Face (Meshed).stl  element.csv  in.csv  node.csv  out.csv  parameter.csv  wall.csv
src/: CMakeLists.txt  calc.cpp  calc.h  func.cpp  func.h  inputcsv.h  inputdata.h  makeBC.h  matrix.h  name.h  namelist.cpp  namelist.h  outputcsv.h
